--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -50,7 +50,11 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row align-items-baseline">
+        <div class="col text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
   </div>
 
@@ -91,7 +95,11 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row align-items-baseline">
+        <div class="col text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
   </div>
 
@@ -136,7 +144,11 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row align-items-baseline">
+        <div class="col text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
   </div>
 
@@ -169,7 +181,11 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row align-items-baseline">
+        <div class="col text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
   </div>
 
@@ -207,7 +223,11 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row align-items-baseline">
+        <div class="col text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
   </div>
 
@@ -239,7 +259,11 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row align-items-baseline">
+        <div class="col text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
   </div>
 
@@ -277,7 +301,5 @@ outputs:
         </p>
       </div>
     </div>
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
-    <hr>
   </div>
 </main>
