--- a/content/about/index.html
+++ b/content/about/index.html
@@ -84,9 +84,13 @@ outputs:
             <div class="col-12">
                 <h2> Welcome! Long story short: </h2>
                 <ul>
-                    <li> Currently, I work as a machine learning engineer at <a href="https://www.daedalean.ai">
-                            Daedalean AI</a>, making a self-flying car that uses certifiable (acc. to EASA regulations)
-                        avionics/autopilot.
+                    <li>
+                        Currently, I work as a senior data engineer at <a href="https://www.six-group.com/en/home.html">SIX Group</a>, solving
+                        challanges of building high-load data pipelines for sensitive financial data.
+                    </li>
+                    <li> In 2018-2020, I worked as a machine learning and computer vision engineer at
+                            <a href="https://www.daedalean.ai"> Daedalean AI</a>, where I built a prototype of a
+                            detection system for aerial collision avoidance.
                     </li>
                     <li> In 2018, I completed my PhD at the
                         <a href="https://www.ethz.ch/en.html">ETH Zurich</a>, in
