--- a/content/about/index.html
+++ b/content/about/index.html
@@ -27,7 +27,7 @@ outputs:
                         target="_blank">alexey@gronskiy.com</a>
                 </div>
                 <div class="text-left">
-                    <span class="fa fa-file-pdf-o fa-fw"></span> <a href="{{< staticref `assets/cv.pdf` >}}"
+                    <span class="fa fa-file-pdf-o fa-fw"></span> <a href="{{% staticref `assets/cv.pdf` %}}"
                         target="_blank">CV</a>
                 </div>
                 <div class="text-left">
@@ -55,7 +55,7 @@ outputs:
                     target="_blank">alexey@gronskiy.com</a>
             </div>
             <div class="col-md-4 pl-2">
-                <span class="fa fa-file-pdf-o fa-fw"></span> <a href="{{< staticref `assets/cv.pdf` >}}" target="_blank">CV</a>
+                <span class="fa fa-file-pdf-o fa-fw"></span> <a href="{{% staticref `assets/cv.pdf` %}}" target="_blank">CV</a>
             </div>
             <div class="col-md-4 pl-2">
                 <span class="fa fa-linkedin-square fa-fw"></span> <a href="https://ch.linkedin.com/in/agronskiy"
@@ -109,7 +109,7 @@ outputs:
                     </li>
                     <li> In 2011, I graduated from <a href="https://www.msu.ru/en/">Moscow State University</a>,
                         dept. of Mathematics and Mechanics. I specialized in discrete mathematics
-                        (see <a href="{{< ref `/projects/index.html#metric_properties` >}}">Projects</a>).</li>
+                        (see <a href="{{% ref `/projects/index.html#metric_properties` %}}">Projects</a>).</li>
                 </ul>
             </div>
         </div>
