--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -66,8 +66,8 @@ outputs:
     </div>
     <div class="row">
       <div class="col-md-4 pb-md-2 pt-2 pb-4 text-center">
-        <a href="{{< contentref `/posts/2018-12-23-phd-thesis-and-talk-published-en/phd-talk-scheme.jpg` >}}" data-lightbox="page_image">
-          <img class="img-fluid md-img-very-large" src="{{< contentref `/posts/2018-12-23-phd-thesis-and-talk-published-en/phd-talk-scheme.jpg` >}}">
+        <a href="{{% contentref `/posts/2018-12-23-phd-thesis-and-talk-published-en/phd-talk-scheme.jpg` %}}" data-lightbox="page_image">
+          <img class="img-fluid md-img-very-large" src="{{% contentref `/posts/2018-12-23-phd-thesis-and-talk-published-en/phd-talk-scheme.jpg` %}}">
         </a>
       </div>
 
@@ -294,9 +294,9 @@ outputs:
         </p>
         <p>
           <ul>
-            <li> MSc thesis <a href="{{< staticref `/assets/gronskiy_boolean_en.pdf` >}}" target="_blank">[EN, pdf]</a>
-            or <a href="{{< staticref `/assets/gronskiy_boolean_ru.pdf` >}}" target="_blank">[RU, pdf]</a>. </li>
-            <li> Talk at ETH Zurich, <a href="{{< staticref `/assets/gronskiy_boolean_talk.pdf` >}}" target="_blank">[EN, pdf]</a>. </li>
+            <li> MSc thesis <a href="{{% staticref `/assets/gronskiy_boolean_en.pdf` %}}" target="_blank">[EN, pdf]</a>
+            or <a href="{{% staticref `/assets/gronskiy_boolean_ru.pdf` %}}" target="_blank">[RU, pdf]</a>. </li>
+            <li> Talk at ETH Zurich, <a href="{{% staticref `/assets/gronskiy_boolean_talk.pdf` %}}" target="_blank">[EN, pdf]</a>. </li>
           </ul>
         </p>
       </div>
