Upd index with Snyk

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -85,8 +85,14 @@ outputs:
                 <h2> Welcome! Long story short: </h2>
                 <ul>
                     <li>
-                        Currently, I work as a senior data engineer at <a href="https://www.six-group.com/en/home.html">SIX Group</a>, solving
-                        challanges of building high-load data pipelines for sensitive financial data.
+                        Currently, I am senior software engineer with <a href="https://snyk.io">Snyk</a> (team previously
+                        known as <a href="https://deepcode.ai">DeepCode AI</a>), working on machine learning for 
+                        program analysis and code security.
+                    </li>
+                    <li>
+                        For a short period in 2020-2021, I worked as a senior data engineer at 
+                        <a href="https://www.six-group.com/en/home.html">SIX Group</a>, where I established data pipelines
+                        for ATM location analysis and optimization. 
                     </li>
                     <li> In 2018-2020, I worked as a machine learning and computer vision engineer at
                             <a href="https://www.daedalean.ai"> Daedalean AI</a>, where I built a prototype of a
