fix: link to thesis

--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -83,11 +83,9 @@ outputs:
         <p>
         <p>
           <ul>
-            <li> PhD Thesis <a href="assets/files/gronskiy_phd_thesis.pdf" target="_blank">
-                [EN, pdf]
-              </a>
+            <li> PhD Thesis <a href="{{% staticref `/assets/files/gronskiy_phd_thesis.pdf` %}}" target="_blank">[EN, pdf]</a>
             </li>
-            <li> PhD defense slides <a href="assets/files/gronskiy_phd_talk.pdf" target="_blank">
+            <li> PhD defense slides <a href="{{% staticref `/assets/files/gronskiy_phd_talk.pdf` %}}" target="_blank">
                 [EN, pdf]
               </a>
             </li>
