fix(href): broken link

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -123,7 +123,7 @@ outputs:
           <li>
             In 2010-2012, I worked at
             <a href="https://www.abbyy.com/en-eu/">ABBYY</a> as a part of
-            <a href="http://compreno.com/en">NLP Compreno Project</a> in the
+            <a href="https://www.abbyy.com/media/10595/abbyy-smart-classifier-user-guide_en.pdf">NLP Compreno Project</a> in the
             role of C++ SWE. There I developed an SDK for morphological and
             lexical analyzer subsystems.
           </li>
