--- a/content/about/index.html
+++ b/content/about/index.html
@@ -130,11 +130,7 @@ outputs:
           <li>
             In 2011, I graduated from
             <a href="https://www.msu.ru/en/">Moscow State University</a>, dept.
-            of Mathematics and Mechanics. I specialized in discrete mathematics
-            (see
-            <a href="{{% ref `/projects/index.html#metric_properties` %}}"
-              >Projects</a
-            >).
+            of Mathematics and Mechanics. I specialized in discrete mathematics.
           </li>
         </ul>
       </div>
